src/test/ui/argument-suggestions/complex.stderr
error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/complex.rs:14:11
   |
LL |   complex(1.0, H {}, &"", G{}, F::X2, Z {}, X {}, Y {});
   |           ^^^  ^^^^      ^^^^  ^^^^^  ^^^^  ^^^^  ^^^^ expected Z, found Y
   |           |    |         ||    |      |     |
   |           |    |         ||    |      |     expected Y, found X
   |           |    |         ||    |      expected X, found Z
   |           |    |         ||    expected G, found F
   |           |    |         |expected F, found G
   |           |    |         missing argument of type E
   |           |    no parameter of type H is needed in complex
   |           expected u32, found {float}
   |
note: function defined here
  --> $DIR/complex.rs:11:4
   |
LL | fn complex(_i: u32, _s: &str, _e: E, _f: F, _g: G, _x: X, _y: Y, _z: Z ) {}
   |    ^^^^^^^ -------  --------  -----  -----  -----  -----  -----  ------
help: the following changes might help
   |
LL |   complex( {u32},, &"", {E}, F::X2, G{}, X {}, Y {}, Z {});
   |            ^^^^^^ --    ^^^^ ^^^^^  ^^^  ^^^^  ^^^^  ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0059`.
